# awtrix-publisher

./: .envrc  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.src  README.md  pyproject.toml  shell.nix  shell.nix~
.github/workflows/: build.yaml  build_and_publish.yaml  pypi.yaml  pytest.yaml
.github/workflows/disabled/: build.yaml
dnull_mqtt/apps/: notion.py
hass/javascript_scripts/: package-lock.json  package.json
hass/python_scripts/dnull-mqtt/: .env.example  pyproject.toml
hass/python_scripts/dnull-mqtt/dnull_mqtt/: __main__.py  app.py  app_notion.py  awtrix.py  base_log.py  colors.py  config.py  local_binance.py  mqtt.py
hass/python_scripts/dnull-mqtt/dnull_mqtt/apps/: app.py  binance.py  notion.py
js/: actual.js
python/: pyproject.toml
tests/: docker-compose.yaml  test_notion.py
